[package]
name = "rustwrk"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance HTTP benchmarking tool written in Rust"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["full", "client"] }
hyper-util = { version = "0.1", features = ["full", "client", "client-legacy", "http1"] }
http-body-util = { version = "0.1", features = ["full"] }
bytes = { version = "1.5", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5"
num_cpus = "1.16"
metrics = "0.22"
metrics-util = "0.16"
hdrhistogram = "7.5"
hyper-tls = "0.6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3" 